# internal/controller/auth.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/google/uuid"
 	"github.com/labstack/echo/v4"
 
 	"machineIssuerSystem/internal/model"
@@ -73,4 +74,23 @@ func (h *handlers) SignOut(ctx echo.Context) error {
 	})
 
 	return ctx.String(http.StatusOK, "Sign out successfully")
+}
+
+func (h *handlers) IsAdmin(ctx echo.Context) error {
+	userID, ok := ctx.Get("id").(string)
+	if !ok {
+		h.logger.Info("could not get user id")
+	}
+
+	userUUID, err := uuid.Parse(userID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	isAdmin, err := h.core.IsAdmin(ctx.Request().Context(), userUUID)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+	}
+
+	return ctx.JSON(http.StatusOK, isAdmin)
 }
